--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,6 @@ rvm:
   - 2.1
   - 2.2
 script:
-  - bundle exec foodcritic -f any --tags ~FC003 --tags ~FC015 --tags ~FC023 .
+  - bundle exec foodcritic -f any --tags ~FC003 --tags ~FC015 --tags ~FC023 --tags ~FC002 .
   - bundle exec rubocop
   - bundle exec rspec --color --format progress
