--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,20 +1,31 @@
 AllCops:
   Exclude:
     - vendor/**/*
+    - Guardfile
 
 AlignParameters:
   Enabled: false
+ClassLength:
+  Enabled: false
 CyclomaticComplexity:
+  Enabled: false
+Documentation:
   Enabled: false
 Encoding:
   Enabled: false
+Style/FileName:
+  Enabled: false
 LineLength:
   Enabled: false
-NumericLiterals:
+MethodLength:
   Enabled: false
-SingleSpaceBeforeFirstArg:
+Metrics/AbcSize:
   Enabled: false
 PerceivedComplexity:
   Enabled: false
-AbcSize:
+SingleSpaceBeforeFirstArg:
+  Enabled: false
+Style/ClassAndModuleChildren:
+  Enabled: false
+Style/FileName:
   Enabled: false
