--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -5,14 +5,16 @@ provisioner:
   name: chef_zero
 
 platforms:
-- name: ubuntu-14.04
-  run_list:
-  - recipe[apt]
-- name: ubuntu-12.04
-  run_list:
-  - recipe[apt]
-- name: centos-7.1
-- name: centos-6.7
+  - name: centos-6.7
+  - name: centos-7.2
+  - name: debian-8.4
+  - name: ubuntu-12.04
+    run_list: apt::default
+  - name: ubuntu-14.04
+    run_list: apt::default
+  - name: ubuntu-16.04
+    run_list: apt::default
+
 suites:
 - name: default
   run_list:
