--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -3,13 +3,18 @@ driver:
 
 provisioner:
   name: chef_zero
+  product_name: chef
+  product_version: <%= ENV['CHEF_VERSION'] || 'latest' %>
+  install_strategy: once
+  deprecations_as_errors: true
+
+verifier:
+  name: inspec
 
 platforms:
-  - name: centos-6.7
-  - name: centos-7.2
-  - name: debian-8.4
-  - name: ubuntu-12.04
-    run_list: apt::default
+  - name: centos-6
+  - name: centos-7
+  - name: debian-8
   - name: ubuntu-14.04
     run_list: apt::default
   - name: ubuntu-16.04
