--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ test/tmp
 test/version_tmp
 tmp
 _Store
+.DS_Store
 *~
 *#
 .#*
@@ -34,15 +35,18 @@ _yardoc
 doc/
 .idea
 
-#chef stuff
+# chef stuff
 Berksfile.lock
 .kitchen
 .kitchen.local.yml
 vendor/
 .coverage/
 .zero-knife.rb
+Policyfile.lock.json
+Cheffile.lock
+.librarian/
 
-#vagrant stuff
+# vagrant stuff
 .vagrant/
 .vagrant.d/
 .kitchen/
