--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -16,15 +16,12 @@ platforms:
   - name: centos-7
   - name: debian-8
   - name: ubuntu-14.04
-    run_list: apt::default
   - name: ubuntu-16.04
-    run_list: apt::default
 
 suites:
 - name: default
   run_list:
-  - recipe[snort]
-  - recipe[pulledpork]
+    - recipe[test::default]
   attributes:
     pulledpork:
       rule_url_array:
