--- a/kitchen.dokken.yml
+++ b/kitchen.dokken.yml
@@ -1,7 +1,8 @@
+---
 driver:
   name: dokken
-  privileged: true # because Docker and SystemD/Upstart
-  chef_version: <%= ENV['CHEF_VERSION'] || 'current' %>
+  privileged: true
+  chef_version: <%= ENV['CHEF_VERSION'] || 'latest' %>
   env: [CHEF_LICENSE=accept]
 
 transport:
@@ -16,13 +17,6 @@ platforms:
   driver:
     image: dokken/amazonlinux
     pid_one_command: /sbin/init
-
-- name: debian-8
-  driver:
-    image: dokken/debian-8
-    pid_one_command: /bin/systemd
-    intermediate_instructions:
-      - RUN /usr/bin/apt-get update
 
 - name: debian-9
   driver:
@@ -40,23 +34,6 @@ platforms:
   driver:
     image: dokken/centos-7
     pid_one_command: /usr/lib/systemd/systemd
-
-- name: fedora-26
-  driver:
-    image: dokken/fedora-26
-    pid_one_command: /usr/lib/systemd/systemd
-
-- name: fedora-27
-  driver:
-    image: dokken/fedora-27
-    pid_one_command: /usr/lib/systemd/systemd
-
-- name: ubuntu-14.04
-  driver:
-    image: dokken/ubuntu-14.04
-    pid_one_command: /sbin/init
-    intermediate_instructions:
-      - RUN /usr/bin/apt-get update
 
 - name: ubuntu-16.04
   driver:
