--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,7 +24,17 @@ workflows:
           name: delivery
 
       - kitchen/dokken-single:
-          name: default
-          suite: default
+          name: default-centos-6
+          suite: default-centos-6
+          requires:
+            *lint_and_unit
+      - kitchen/dokken-single:
+          name: default-centos-7
+          suite: default-centos-7
+          requires:
+            *lint_and_unit
+      - kitchen/dokken-single:
+          name: default-ubuntu-1604
+          suite: default-ubuntu-1604
           requires:
             *lint_and_unit
