--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -1,3 +1,4 @@
+---
 driver:
   name: vagrant
 
@@ -15,8 +16,9 @@ platforms:
   - name: centos-6
   - name: centos-7
   - name: debian-8
-  - name: ubuntu-14.04
+  - name: debian-9
   - name: ubuntu-16.04
+  - name: ubuntu-18.04
 
 suites:
 - name: default
