--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -14,17 +14,17 @@ verifier:
 
 platforms:
   - name: centos-6
-  - name: centos-7
+  - name: centos-7a
   - name: debian-8
   - name: debian-9
   - name: ubuntu-16.04
   - name: ubuntu-18.04
 
 suites:
-- name: default
-  run_list:
-    - recipe[test::default]
-  attributes:
-    pulledpork:
-      rule_url_array:
-        - 'https://snort.org/downloads/community/|community-rules.tar.gz|Community'
+  - name: default
+    run_list:
+      - recipe[test::default]
+    attributes:
+      pulledpork:
+        rule_url_array:
+          - 'https://snort.org/downloads/community/|community-rules.tar.gz|Community'
