--- a/kitchen.yml
+++ b/kitchen.yml
@@ -14,7 +14,7 @@ verifier:
 
 platforms:
   - name: centos-6
-  - name: centos-7a
+  - name: centos-7
   - name: debian-8
   - name: debian-9
   - name: ubuntu-16.04
