--- a/kitchen.yml
+++ b/kitchen.yml
@@ -7,7 +7,8 @@ provisioner:
   product_name: chef
   product_version: <%= ENV['CHEF_VERSION'] || 'latest' %>
   install_strategy: once
-  deprecations_as_errors: true
+  # TODO: disable until upstream cookbooks enable unified_mode
+  # deprecations_as_errors: true
 
 verifier:
   name: inspec
